--- a/packages/backend/discovery/termstructure/ethereum/config.jsonc
+++ b/packages/backend/discovery/termstructure/ethereum/config.jsonc
@@ -13,7 +13,7 @@
     "0x955cdD2E56Ca2776a101a552A318d28fe311398D": "RollupFacet",
     "0x8D0fc76595E42f38c771ecEE627DA5654Ca2E75A": "AccountFacet",
     "0x882aBFb2F6A67d36350499991638044e8Bd83a72": "EvacuationFacet",
-    "0xa00d50A40B1635D293c87BA36503bD2504b5D818": "Multisig",
+    "0xa00d50A40B1635D293c87BA36503bD2504b5D818": "TermStructureMultisig",
     "0x0A4aB40Cc78D34052e1A8F5Bb5BaEb0174aBDe12": "Rolluper",
     "0xeBec1D162f8467C0070C190A347Bbc3bFf6d14F8": "Operator"
   },
