--- a/packages/backend/discovery/immutablezkevm/ethereum/config.jsonc
+++ b/packages/backend/discovery/immutablezkevm/ethereum/config.jsonc
@@ -5,9 +5,20 @@
   "initialAddresses": ["0xBa5E35E26Ae59c7aea6F029B68c6460De2d13eB6"],
   "names": {
     "0xBa5E35E26Ae59c7aea6F029B68c6460De2d13eB6": "Bridge",
-    "0xD2C37fC6fD89563187f3679304975655e448D192": "OwnerMultisig"
+    "0xD2C37fC6fD89563187f3679304975655e448D192": "OwnerMultisig",
+    "0x4f49B53928A71E553bB1B0F66a5BcB54Fd4E8932": "RootAxelarBridgeAdaptor"
   },
   "overrides": {
+    "RootAxelarBridgeAdaptor": {
+      "ignoreRelatives": ["gasService"],
+      "fields": {
+        "accessControl": {
+          "handler": {
+            "type": "accessControl"
+          }
+        }
+      }
+    },
     "Bridge": {
       "ignoreRelatives": ["rootWETHToken", "rootIMXToken"],
       "ignoreInWatchMode": ["withdrawalQueueActivated"],
