More discovery with the new "target" field
A lot of stuff is commented because there is a bug in discovery. It does
not prune unreachable objects correctly.

--- a/packages/backend/discovery/_templates/transporter/OffRamp/template.jsonc
+++ b/packages/backend/discovery/_templates/transporter/OffRamp/template.jsonc
@@ -5,5 +5,18 @@
     "getSupportedTokens",
     "getDestinationTokens",
     "getAllowList"
-  ]
+  ],
+  "fields": {
+    "commitStore": {
+        "target": {
+          "template": "transporter/CommitStore"
+        },
+      "handler": {
+        "type": "call",
+        "method": "getStaticConfig",
+        "args": [],
+        "pickFields": ["commitStore"],
+      }
+    },
+  }
 }
