--- a/packages/backend/discovery/_templates/transporter/OnRamp/template.jsonc
+++ b/packages/backend/discovery/_templates/transporter/OnRamp/template.jsonc
@@ -1,8 +1,12 @@
 {
   "$schema": "../../../../../discovery/schemas/contract.v2.schema.json",
-  "ignoreMethods": ["getNops", "getAllowList"],
+  "ignoreMethods": ["getNops", "getAllowList", "getStaticConfig", "getSupportedTokens"],
+  "ignoreRelatives": ["getSupportedTokens", "tokenAddresses", "linkToken"],
   "fields": {
     "tokenPools": {
+      "target": {
+        "template": "transporter/TokenPool"
+      },
       "handler": {
         "type": "arrayFromTwoEvents",
         "addEvent": "PoolAdded",
@@ -11,13 +15,21 @@
         "removeKey": "pool"
       }
     },
-    "tokenAddresses": {
-      "handler": {
-        "type": "call",
-        "method": "getSupportedTokens",
-        "args": [0],
-        "ignoreRelative": true
-      }
-    }
+    //"linkToken": {
+    //  "handler": {
+    //    "type": "call",
+    //    "args": [],
+    //    "method": "getStaticConfig",
+    //    "pickFields": ["linkToken"],
+    //  }
+    //},
+    //"tokenAddresses": {
+    //  "handler": {
+    //    "type": "call",
+    //    "method": "getSupportedTokens",
+    //    "args": [0],
+    //    "ignoreRelative": true
+    //  }
+    //}
   }
 }
