--- a/packages/config/src/tokens/tokens.jsonc
+++ b/packages/config/src/tokens/tokens.jsonc
@@ -525,7 +525,8 @@
     },
     {
       "symbol": "iUSD",
-      "address": "0x0a3bb08b3a15a19b4de82f8acfc862606fb69a2d"
+      "address": "0x0a3bb08b3a15a19b4de82f8acfc862606fb69a2d",
+      "category": "stablecoin"
     },
     {
       "symbol": "KCS",
@@ -891,7 +892,8 @@
     },
     {
       "symbol": "sDAI",
-      "address": "0x83F20F44975D03b1b09e64809B757c47f942BEeA"
+      "address": "0x83F20F44975D03b1b09e64809B757c47f942BEeA",
+      "category": "stablecoin"
     },
     {
       "symbol": "sfrxETH",
@@ -1633,6 +1635,7 @@
     {
       "symbol": "alUSD",
       "address": "0xCB8FA9a76b8e203D8C3797bF438d8FB81Ea3326A",
+      "category": "stablecoin",
       "type": "NMV",
       "formula": "totalSupply",
       "bridgedUsing": {
@@ -1826,6 +1829,7 @@
     {
       "symbol": "USDT",
       "address": "0x954bE1803546150bfd887c9ff70fd221F2F505d3",
+      "category": "stablecoin",
       "type": "EBV",
       "formula": "totalSupply",
       "bridgedUsing": {
@@ -1880,6 +1884,7 @@
       "symbol": "USDe",
       "coingeckoId": "ethena-usde",
       "address": "0x5d3a1Ff2b6BAb83b63cd9AD0787074081a52ef34",
+      "category": "stablecoin",
       "type": "EBV",
       "formula": "totalSupply",
       "bridgedUsing": {
@@ -2050,6 +2055,7 @@
     {
       "symbol": "sDAI",
       "address": "0x5da1004F7341D510C6651C67B4EFcEEA76Cac0E8",
+      "category": "stablecoin",
       "type": "EBV",
       "formula": "totalSupply",
       "bridgedUsing": {
@@ -2086,6 +2092,7 @@
     {
       "symbol": "USDC",
       "address": "0xC06Ed0eB5c0e25fa71B37A3F33CFa62C7d9dD542",
+      "category": "stablecoin",
       "type": "EBV",
       "formula": "totalSupply",
       "bridgedUsing": {
@@ -2138,6 +2145,7 @@
     {
       "symbol": "USDB",
       "address": "0x4300000000000000000000000000000000000003",
+      "category": "stablecoin",
       "type": "EBV",
       "formula": "totalSupply",
       "bridgedUsing": {
@@ -2509,6 +2517,7 @@
     {
       "symbol": "USDC",
       "address": "0x3B860c0b53f2e8bd5264AA7c3451d41263C933F2",
+      "category": "stablecoin",
       "type": "EBV",
       "formula": "totalSupply",
       "bridgedUsing": {
