--- a/packages/config/turbo.json
+++ b/packages/config/turbo.json
@@ -1,7 +1,9 @@
 {
   "$schema": "https://turbo.build/schema.json",
-  "extends": ["//"],
-  "pipeline": {
+  "extends": [
+    "//"
+  ],
+  "tasks": {
     "test": {
       "inputs": [
         "**/*.ts",
