Fix build scripts after removing asset risks

--- a/package.json
+++ b/package.json
@@ -11,12 +11,11 @@
   },
   "packageManager": "yarn@1.22.19",
   "scripts": {
-    "build": "turbo run build --filter=!@l2beat/asset-risk",
-    "build:asset-risk": "turbo run build --filter=@l2beat/asset-risk",
+    "build": "turbo run build",
     "build:backend": "turbo run build --filter=@l2beat/backend",
     "build:frontend": "turbo run build --filter=@l2beat/frontend",
     "build:frontend2": "turbo run build --filter=@l2beat/frontend2",
-    "build:dependencies": "turbo run build --filter=@l2beat/frontend^... --filter=@l2beat/frontend2^... --filter=@l2beat/backend^... --filter=@l2beat/asset-risk^...",
+    "build:dependencies": "turbo run build --filter=@l2beat/frontend^... --filter=@l2beat/frontend2^... --filter=@l2beat/backend^...",
     "clean": "turbo run clean",
     "fix": "yarn lint:fix && yarn format:fix",
     "format": "wsrun -ecam format",
