Changes after prunning fixes

--- a/packages/backend/discovery/_templates/transporter/PriceRegistry/template.jsonc
+++ b/packages/backend/discovery/_templates/transporter/PriceRegistry/template.jsonc
@@ -1,5 +1,4 @@
 {
   "$schema": "../../../../../discovery/schemas/contract.v2.schema.json",
-  "ignoreMethods": [ "getFeeTokens" ],
-  // "ignoreRelatives": [ "getFeeTokens" ],
+  "ignoreRelatives": [ "getFeeTokens" ],
 }
