--- a/packages/backend/discovery/transporter/ethereum/config.jsonc
+++ b/packages/backend/discovery/transporter/ethereum/config.jsonc
@@ -101,7 +101,8 @@
             "onlyValue": true
           }
         }
-      }
+      },
+      "ignoreRelatives": ["getWrappedNative"]
     },
     "Router2": {
       "fields": {
