--- a/packages/backend/discovery/_templates/transporter/OnRampV2/template.jsonc
+++ b/packages/backend/discovery/_templates/transporter/OnRampV2/template.jsonc
@@ -1,6 +1,6 @@
 {
   "$schema": "../../../../../discovery/schemas/contract.v2.schema.json",
-  "ignoreMethods": ["getNops", "getAllowList", "getStaticConfig", "getSupportedTokens"],
+  "ignoreMethods": ["getNops", "getAllowList", "getStaticConfig"],
   "ignoreRelatives": ["getSupportedTokens", "tokenAddresses", "linkToken"],
   "fields": {
     "tokenPools": {
@@ -12,21 +12,37 @@
         "removeKey": "pool"
       }
     },
-    //"linkToken": {
-    //  "handler": {
-    //    "type": "call",
-    //    "args": [],
-    //    "method": "getStaticConfig",
-    //    "pickFields": ["linkToken"],
-    //  }
-    //},
-    //"tokenAddresses": {
-    //  "handler": {
-    //    "type": "call",
-    //    "method": "getSupportedTokens",
-    //    "args": [],
-    //    "ignoreRelative": true
-    //  }
-    //}
+    "linkToken": {
+      "handler": {
+        "type": "call",
+        "args": [],
+        "method": "getStaticConfig",
+        "pickFields": ["linkToken"],
+      }
+    },
+    "staticConfigAddresses": {
+      "handler": {
+        "type": "call",
+        "args": [],
+        "method": "getStaticConfig",
+        "pickFields": ["prevOnRamp", "armProxy"],
+      }
+    },
+    "staticConfigChains": {
+      "handler": {
+        "type": "call",
+        "args": [],
+        "method": "getStaticConfig",
+        "pickFields": ["chainSelector", "destChainSelector"],
+      }
+    },
+    "tokenAddresses": {
+      "handler": {
+        "type": "call",
+        "method": "getSupportedTokens",
+        "args": [],
+        "ignoreRelative": true
+      }
+    }
   }
 }
