--- a/packages/backend/discovery/_templates/transporter/TokenPool/template.jsonc
+++ b/packages/backend/discovery/_templates/transporter/TokenPool/template.jsonc
@@ -1,5 +1,4 @@
 {
   "$schema": "../../../../../discovery/schemas/contract.v2.schema.json",
-  "ignoreMethods": ["getToken"]
-  // "ignoreRelatives": ["getToken"]
+  "ignoreRelatives": ["getToken"]
 }
