--- a/packages/backend/discovery/_templates/transporter/OffRamp/template.jsonc
+++ b/packages/backend/discovery/_templates/transporter/OffRamp/template.jsonc
@@ -8,15 +8,15 @@
   ],
   "fields": {
     "commitStore": {
-        "target": {
-          "template": "transporter/CommitStore"
-        },
+      "target": {
+        "template": "transporter/CommitStore"
+      },
       "handler": {
         "type": "call",
         "method": "getStaticConfig",
         "args": [],
-        "pickFields": ["commitStore"],
+        "pickFields": ["commitStore"]
       }
-    },
+    }
   }
 }
