--- a/packages/backend/discovery/_templates/transporter/OnRampV2/template.jsonc
+++ b/packages/backend/discovery/_templates/transporter/OnRampV2/template.jsonc
@@ -17,7 +17,7 @@
         "type": "call",
         "args": [],
         "method": "getStaticConfig",
-        "pickFields": ["linkToken"],
+        "pickFields": ["linkToken"]
       }
     },
     "staticConfigAddresses": {
@@ -25,7 +25,7 @@
         "type": "call",
         "args": [],
         "method": "getStaticConfig",
-        "pickFields": ["prevOnRamp", "armProxy"],
+        "pickFields": ["prevOnRamp", "armProxy"]
       }
     },
     "staticConfigChains": {
@@ -33,7 +33,7 @@
         "type": "call",
         "args": [],
         "method": "getStaticConfig",
-        "pickFields": ["chainSelector", "destChainSelector"],
+        "pickFields": ["chainSelector", "destChainSelector"]
       }
     },
     "tokenAddresses": {
