--- a/packages/backend/discovery/transporter/ethereum/config.jsonc
+++ b/packages/backend/discovery/transporter/ethereum/config.jsonc
@@ -115,7 +115,11 @@
             "onlyValue": true
           }
         }
-      }
+      },
+      "ignoreRelatives": ["getWrappedNative"]
+    },
+    "EtherSenderReceiver": {
+      "ignoreMethods": ["i_weth"]
     }
   }
 }
