--- a/packages/backend/discovery/_templates/transporter/OnRamp/template.jsonc
+++ b/packages/backend/discovery/_templates/transporter/OnRamp/template.jsonc
@@ -1,7 +1,7 @@
 {
   "$schema": "../../../../../discovery/schemas/contract.v2.schema.json",
   "ignoreMethods": ["getNops", "getAllowList", "getStaticConfig"],
-  "ignoreRelatives": ["getSupportedTokens", "tokenAddresses", "linkToken"],
+  "ignoreRelatives": ["getSupportedTokens", "tokenAddresses", "linkToken","getAllowList" ],
   "fields": {
     "tokenPools": {
       "target": {
