--- a/packages/backend/discovery/transporter/ethereum/config.jsonc
+++ b/packages/backend/discovery/transporter/ethereum/config.jsonc
@@ -57,9 +57,53 @@
     "0xe2Eb229e88F56691e96bb98256707Bc62160FE73": "OnRamp14",
     "0x8B63b3DE93431C0f756A493644d128134291fA1b": "ARM",
     "0x80226fc0Ee2b096224EeAc085Bb9a8cba1146f7D": "Router",
-    "0xE561d5E02207fb5eB32cca20a699E0d8919a1476": "Router2"
+    "0xE561d5E02207fb5eB32cca20a699E0d8919a1476": "Router2",
+
+    "0xB9281d9d494EE5b8b06f5ECb43bE37684804b818": "ChainlinkCcipGateway",
   },
   "overrides": {
+    "OnRamp1":{
+      "extends": "transporter/OnRamp"
+    },
+    "OnRamp2":{
+      "extends": "transporter/OnRamp"
+    },
+    "OnRamp3":{
+      "extends": "transporter/OnRamp"
+    },
+    "OnRamp4":{
+      "extends": "transporter/OnRamp"
+    },
+    "OnRamp5":{
+      "extends": "transporter/OnRamp"
+    },
+    "OnRamp6":{
+      "extends": "transporter/OnRamp"
+    },
+    "OnRamp7":{
+      "extends": "transporter/OnRamp"
+    },
+    "OnRamp8":{
+      "extends": "transporter/OnRamp"
+    },
+    "OnRamp9":{
+      "extends": "transporter/OnRamp"
+    },
+    "OnRamp10":{
+      "extends": "transporter/OnRamp"
+    },
+    "OnRamp11":{
+      "extends": "transporter/OnRamp"
+    },
+    "OnRamp12":{
+      "extends": "transporter/OnRamp"
+    },
+    "OnRamp13":{
+      "extends": "transporter/OnRamp"
+    },
+    "OnRamp14":{
+      "extends": "transporter/OnRamp"
+    },
     "ARM": {
       "ignoreMethods": ["getConfigDetails"] // information about voters - bless, curse, curseUnvote
     },
