--- a/packages/config/src/verification/projects.json
+++ b/packages/config/src/verification/projects.json
@@ -45,6 +45,8 @@
   "dydx": true,
   "eclipse": true,
   "edgeless": true,
+  "everclear": true,
+  "form": true,
   "frame": true,
   "fraxferry": true,
   "fraxtal": true,
@@ -147,6 +149,7 @@
   "taiko": true,
   "ten": true,
   "termstructure": true,
+  "teva": true,
   "tradable": true,
   "world": true,
   "wormholeV1": true,
