--- a/packages/backend/discovery/real/ethereum/config.jsonc
+++ b/packages/backend/discovery/real/ethereum/config.jsonc
@@ -19,14 +19,32 @@
     "0xD6A4868a15d98b0BF4E9063BE707B4b89D067C3a": "UpgradeExecutor",
     "0xBeA2Bc852a160B8547273660E22F4F08C2fa9Bbb": "GelatoMultisig",
     "0xFC1db08622e81b2AFd643318f6B8B79E9980A5e1": "RealVault",
-    "0x5Cba18d504D4158dC1A18C5Dc6BB2a30B230DdD8": "StrategyManager"
+    "0x5Cba18d504D4158dC1A18C5Dc6BB2a30B230DdD8": "StrategyManager",
+    "0xC0Cc5eA00cAe0894B441E3B5a3Bb57aa92F15421": "Real",
+    "0xf985E2c73d74BefF3C8c16EFC4fa5ab4cfb62294": "AssetsVault"
   },
   "overrides": {
+    "AssetsVault": {
+      "ignoreInWatchMode": ["getBalance"]
+    },
+    "Real": {
+      "ignoreInWatchMode": ["tokenPrice", "totalSupply"]
+    },
     "RealVault": {
       "ignoreMethods": [
         "previewDeposit",
         "roundPricePerShare",
-        "settlementTime"
+        "settlementTime",
+        "getVaultAvailableAmount",
+        "latestRoundID",
+        "withdrawAmountDust"
+      ],
+      "ignoreInWatchMode": [
+        "currentSharePrice",
+        "withdrawingSharesInPast",
+        "withdrawableAmountInPast",
+        "withdrawingSharesInRound",
+        "rebaseTime"
       ]
     },
     "Bridger": {
