--- a/packages/frontend2/package.json
+++ b/packages/frontend2/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@l2beat/shared-pure": "*",
+    "@radix-ui/react-tooltip": "^1.0.7",
     "@t3-oss/env-nextjs": "^0.10.1",
     "@tanstack/react-query": "^5.37.1",
     "@trpc/client": "^11.0.0-rc.374",
@@ -47,6 +48,7 @@
     "eslint-config-next": "14.2.3",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.1",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.4.5"
   }
 }
