--- a/packages/backend/discovery/_templates/opstack/L1CrossDomainMessenger/template.jsonc
+++ b/packages/backend/discovery/_templates/opstack/L1CrossDomainMessenger/template.jsonc
@@ -1,5 +1,19 @@
 {
   "$schema": "../../../../../discovery/schemas/contract.v2.schema.json",
+  "displayName": "L1CrossDomainMessenger",
+  "description": "Sends messages from L1 to L2, and relays messages from L2 onto L1. In the event that a message sent from L1 to L2 is rejected for exceeding the L2 epoch gas limit, it can be resubmitted via this contract's replay function.",
   "ignoreMethods": ["xDomainMessageSender"],
-  "ignoreInWatchMode": ["messageNonce"]
+  "ignoreInWatchMode": ["messageNonce"],
+  "fields": {
+    "addressManager": {
+      "target": {
+        "template": "opstack/AddressManager"
+      }
+    },
+    "portal": {
+      "target": {
+        "template": "opstack/OptimismPortal"
+      }
+    }
+  }
 }
