--- a/packages/backend/discovery/_templates/opstack/L1StandardBridge/template.jsonc
+++ b/packages/backend/discovery/_templates/opstack/L1StandardBridge/template.jsonc
@@ -1,7 +1,7 @@
 {
   "$schema": "../../../../../discovery/schemas/contract.v2.schema.json",
-  "displayName": "L1ERC721Bridge",
-  "description": "Used to bridge ERC-721 tokens from L1 to L2",
+  "displayName": "L1StandardBridge",
+  "description": "The main entry point to deposit ERC20 tokens from L1 to L2. This contract can store any token.",
   "fields": {
     "superchainConfig": {
       "target": {
