--- a/packages/backend/discovery/real/ethereum/config.jsonc
+++ b/packages/backend/discovery/real/ethereum/config.jsonc
@@ -21,9 +21,13 @@
     "0xFC1db08622e81b2AFd643318f6B8B79E9980A5e1": "RealVault",
     "0x5Cba18d504D4158dC1A18C5Dc6BB2a30B230DdD8": "StrategyManager",
     "0xC0Cc5eA00cAe0894B441E3B5a3Bb57aa92F15421": "Real",
-    "0xf985E2c73d74BefF3C8c16EFC4fa5ab4cfb62294": "AssetsVault"
+    "0xf985E2c73d74BefF3C8c16EFC4fa5ab4cfb62294": "AssetsVault",
+    "0x655756824385F8903AC8cFDa17B656cc26f7C7da": "Minter"
   },
   "overrides": {
+    "Minter": {
+      "ignoreInWatchMode": ["getTokenPrice"]
+    },
     "AssetsVault": {
       "ignoreInWatchMode": ["getBalance"]
     },
