--- a/packages/backend/discovery/zksync2/ethereum/config.jsonc
+++ b/packages/backend/discovery/zksync2/ethereum/config.jsonc
@@ -5,7 +5,8 @@
   "initialAddresses": [
     "0x32400084C286CF3E17e7B677ea9583e60a000324",
     "0x57891966931Eb4Bb6FB81430E6cE0A03AAbDe063",
-    "0x41527B2d03844dB6b0945f25702cB958b6d55989"
+    "0x41527B2d03844dB6b0945f25702cB958b6d55989",
+    "0xD7f9f54194C633F36CCD5F3da84ad4a1c38cB2cB",
   ],
   "names": {
     "0x32400084C286CF3E17e7B677ea9583e60a000324": "zkSync",
@@ -14,15 +15,33 @@
     "0x4e4943346848c4867F81dFb37c4cA9C5715A7828": "Matter Labs Multisig",
     "0x0b622A2061EaccAE1c664eBC3E868b8438e03F61": "Governance",
     "0x41527B2d03844dB6b0945f25702cB958b6d55989": "L1ERC20Bridge_wstETH",
-    "0x3e40D73EB977Dc6a537aF587D48316feE66E9C8c": "LidoAgent"
+    "0x3e40D73EB977Dc6a537aF587D48316feE66E9C8c": "LidoAgent",
+    "0x303a465B659cBB0ab36eE643eA362c509EEb5213": "BridgeHub",
+    "0xc2eE6b6af7d616f6e27ce7F4A451Aedc2b0F5f5C": "StateTransitionManager",
+    "0xD7f9f54194C633F36CCD5F3da84ad4a1c38cB2cB": "L1SharedBridge",
   },
   "overrides": {
+    "BridgeHub": {
+      "ignoreMethods": ["baseToken", "stateTransitionManager"], // TODO: check if correct
+    },
+    "StateTransitionManager": {
+      "ignoreMethods": [
+        // TODO: check if correct
+        "getHyperchain",
+        "protocolVersionDeadline",
+        "protocolVersionIsActive",
+        "upgradeCutHash",
+      ],
+    },
+    "L1SharedBridge": {
+      "ignoreMethods": ["l2BridgeAddress"], // TODO: check if correct
+    },
     "zkSync": {
       "ignoreMethods": [
         "l2LogsRootHash",
         "storedBlockHash",
         "storedBatchHash",
-        "getName"
+        "getName",
       ],
       "ignoreInWatchMode": [
         "getPriorityQueueSize",
@@ -34,7 +53,7 @@
         "getTotalBatchesCommitted",
         "getTotalPriorityTxs",
         "priorityQueueFrontOperation",
-        "getFirstUnprocessedPriorityTx"
+        "getFirstUnprocessedPriorityTx",
       ],
       "fields": {
         "validators": {
@@ -42,23 +61,23 @@
             "type": "arrayFromOneEvent",
             "event": "ValidatorStatusUpdate",
             "valueKey": "validatorAddress",
-            "flagKey": "isActive"
-          }
+            "flagKey": "isActive",
+          },
         },
         "getProtocolVersion": {
           "description": "Protocol version, increments with each protocol change",
-          "severity": "MEDIUM"
+          "severity": "MEDIUM",
         },
         "getVerifierParams": {
           "description": "Verifier parameters used for proving batches",
-          "severity": "LOW"
-        }
-      }
+          "severity": "LOW",
+        },
+      },
     },
     "ValidatorTimelock": {
       "ignoreMethods": [
         "committedBlockTimestamp",
-        "getCommittedBatchTimestamp"
+        "getCommittedBatchTimestamp",
       ],
       "fields": {
         "revertedBlocks": {
@@ -68,9 +87,9 @@
             "returnParams": [
               "totalBlocksCommitted",
               "totalBlocksVerified",
-              "totalBlocksExecuted"
-            ]
-          }
+              "totalBlocksExecuted",
+            ],
+          },
         },
         // the 3 following allow us to get an array of validators without creating a new handler
         // construnctorArgs._validators u validatorsAdded n validatorsRemoved
@@ -78,24 +97,24 @@
         "constructorArgs": {
           "handler": {
             "type": "constructorArgs",
-            "nameArgs": true
-          }
+            "nameArgs": true,
+          },
         },
         "validatorsAdded": {
           "handler": {
             "type": "arrayFromOneEvent",
             "event": "ValidatorAdded",
-            "valueKey": "_addedValidator"
-          }
+            "valueKey": "_addedValidator",
+          },
         },
         "validatorsRemoved": {
           "handler": {
             "type": "arrayFromOneEvent",
             "event": "ValidatorRemoved",
-            "valueKey": "_removedValidator"
-          }
-        }
-      }
+            "valueKey": "_removedValidator",
+          },
+        },
+      },
     },
     "Matter Labs Multisig": {
       "description": "Can instantly upgrade all contracts and roles in the zksync Era contracts",
@@ -104,17 +123,17 @@
         "getOwners": {
           "description": "Signers of the multisig",
           "severity": "LOW",
-          "type": "PERMISSION"
+          "type": "PERMISSION",
         },
         "getThreshold": {
           "description": "Should be 4/8 per official docs",
           "severity": "HIGH",
-          "type": "PERMISSION"
-        }
-      }
+          "type": "PERMISSION",
+        },
+      },
     },
     "L1ERC20Bridge": {
-      "ignoreRelatives": ["l2Bridge", "l2TokenBeacon"]
+      "ignoreRelatives": ["l2Bridge", "l2TokenBeacon"],
     },
     "L1ERC20Bridge_wstETH": {
       "ignoreRelatives": [
@@ -122,34 +141,34 @@
         "l2Token",
         "l2Bridge",
         "l2TokenAddress",
-        "proxy__getAdmin"
-      ]
+        "proxy__getAdmin",
+      ],
     },
     "LidoAgent": {
-      "ignoreDiscovery": true
+      "ignoreDiscovery": true,
     },
     "Governance": {
       "fields": {
         "minDelay": {
           "description": "Minimum delay for scheduled upgrades",
-          "severity": "MEDIUM"
+          "severity": "MEDIUM",
         },
         "owner": {
           "description": "This owner role has all permissions in absence of a security council",
           "severity": "HIGH",
-          "type": "PERMISSION"
+          "type": "PERMISSION",
         },
         "pendingOwner": {
           "description": "Pending owner can be set by current owner and accept or renounce ownership",
           "severity": "HIGH",
-          "type": "PERMISSION"
+          "type": "PERMISSION",
         },
         "securityCouncil": {
           "description": "Address of the security council, change Governance section if this differs from the null address",
           "severity": "HIGH",
-          "type": "PERMISSION"
-        }
-      }
-    }
-  }
+          "type": "PERMISSION",
+        },
+      },
+    },
+  },
 }
