--- a/packages/backend/discovery/zksync2/ethereum/config.jsonc
+++ b/packages/backend/discovery/zksync2/ethereum/config.jsonc
@@ -5,7 +5,8 @@
   "initialAddresses": [
     "0x32400084C286CF3E17e7B677ea9583e60a000324",
     "0x57891966931Eb4Bb6FB81430E6cE0A03AAbDe063",
-    "0x41527B2d03844dB6b0945f25702cB958b6d55989"
+    "0x41527B2d03844dB6b0945f25702cB958b6d55989",
+    "0xD7f9f54194C633F36CCD5F3da84ad4a1c38cB2cB"
   ],
   "names": {
     "0x32400084C286CF3E17e7B677ea9583e60a000324": "zkSync",
@@ -14,9 +15,28 @@
     "0x4e4943346848c4867F81dFb37c4cA9C5715A7828": "Matter Labs Multisig",
     "0x0b622A2061EaccAE1c664eBC3E868b8438e03F61": "Governance",
     "0x41527B2d03844dB6b0945f25702cB958b6d55989": "L1ERC20Bridge_wstETH",
-    "0x3e40D73EB977Dc6a537aF587D48316feE66E9C8c": "LidoAgent"
+    "0x3e40D73EB977Dc6a537aF587D48316feE66E9C8c": "LidoAgent",
+    "0x303a465B659cBB0ab36eE643eA362c509EEb5213": "BridgeHub",
+    "0xc2eE6b6af7d616f6e27ce7F4A451Aedc2b0F5f5C": "StateTransitionManager",
+    "0xD7f9f54194C633F36CCD5F3da84ad4a1c38cB2cB": "L1SharedBridge",
+    "0x5D8ba173Dc6C3c90C8f7C04C9288BeF5FDbAd06E": "ValidatorTimelock_NEW" // TODO: check if correct
   },
   "overrides": {
+    "BridgeHub": {
+      "ignoreMethods": ["baseToken", "stateTransitionManager"] // TODO: check if correct
+    },
+    "StateTransitionManager": {
+      "ignoreMethods": [
+        // TODO: check if correct
+        "getHyperchain",
+        "protocolVersionDeadline",
+        "protocolVersionIsActive",
+        "upgradeCutHash"
+      ]
+    },
+    "L1SharedBridge": {
+      "ignoreMethods": ["l2BridgeAddress"] // TODO: check if correct
+    },
     "zkSync": {
       "ignoreMethods": [
         "l2LogsRootHash",
