disable rule on backend

--- a/packages/backend/biome.json
+++ b/packages/backend/biome.json
@@ -12,5 +12,12 @@
       "discovery/**/.flat",
       "discovery/**/script-ts"
     ]
+  },
+  "linter": {
+    "rules": {
+      "nursery": {
+        "useSortedClasses": "off"
+      }
+    }
   }
 }
