ignore instances in watch mode, they getting too frequent

--- a/packages/backend/discovery/taiko/ethereum/config.jsonc
+++ b/packages/backend/discovery/taiko/ethereum/config.jsonc
@@ -468,6 +468,7 @@
       }
     },
     "SgxVerifier": {
+      "ignoreInWatchMode": ["instances", "nextInstanceId"],
       "description": "Verifier contract for SGX proven blocks.",
       "fields": {
         "proxiableUUID": {
