Linea update: Ignore currentFinalizedState

--- a/packages/backend/discovery/linea/ethereum/config.jsonc
+++ b/packages/backend/discovery/linea/ethereum/config.jsonc
@@ -25,7 +25,8 @@
         "currentPeriodAmountInWei",
         "currentL2StoredL1MessageNumber",
         "currentL2StoredL1RollingHash",
-        "currentFinalizedShnarf"
+        "currentFinalizedShnarf",
+        "currentFinalizedState"
       ],
       "ignoreMethods": [
         "stateRootHashes",
