--- a/packages/backend/discovery/zksync2/ethereum/config.jsonc
+++ b/packages/backend/discovery/zksync2/ethereum/config.jsonc
@@ -23,6 +23,18 @@
     "BridgeHub": {
       "ignoreMethods": ["baseToken", "stateTransitionManager"],
       "fields": {
+        "chainsCreated": {
+          "description": "All new chains created go thorugh the central bridgehub and are thus stored here with their respective STMs.",
+          "handler": {
+            "type": "stateFromEvent",
+            "event": "NewChain",
+            "returnParams": [
+              "chainId",
+              "stateTransitionManager",
+              "chainGovernance"
+            ]
+          }
+        },
         "zksyncEraDiamond": {
           "handler": {
             "type": "call",
