--- a/packages/backend/discovery/optimism/optimism/config.jsonc
+++ b/packages/backend/discovery/optimism/optimism/config.jsonc
@@ -21,6 +21,7 @@
   ],
   "names": {
     "0x4200000000000000000000000000000000000010": "L2StandardBridge",
+    "0x4200000000000000000000000000000000000011": "SequencerFeeVault",
     "0x420000000000000000000000000000000000000F": "GasPriceOracle",
     "0x4200000000000000000000000000000000000042": "OPToken",
     "0x4200000000000000000000000000000000000007": "L2CrossDomainMessenger",
@@ -34,6 +35,9 @@
     "0x5a7749f83b81B301cAb5f48EB8516B986DAef23D": "OldQuixoticNFTBridge"
   },
   "overrides": {
+    "SequencerFeeVault": {
+      "ignoreMethods": ["totalProcessed"]
+    },
     "GasPriceOracle": {
       "ignoreMethods": ["overhead", "scalar"],
       "ignoreInWatchMode": ["l1BaseFee"]
