--- a/packages/backend/discovery/zksync2/ethereum/config.jsonc
+++ b/packages/backend/discovery/zksync2/ethereum/config.jsonc
@@ -82,8 +82,18 @@
         "getFirstUnprocessedPriorityTx"
       ],
       "fields": {
+        "txFilterer": {
+          "description": "Optional: This contract must expose the ITransactionFilterer interface (see Mailbox facet) and is used for censoring transactions pushed from L1 to L2.",
+          "severity": "HIGH",
+          "handler": {
+            "type": "stateFromEvent",
+            "event": "NewTransactionFilterer",
+            "returnParams": ["oldTransactionFilterer", "newTransactionFilterer"]
+          }
+        },
         "validators": {
-          // this does not catch validators changed through an upgrade of the diamond (this is about the validator role in the executor (usually held by the validatorTimelock), not the validators of the ValidatorTimelock)
+          // this does not catch validators changed through an upgrade of the diamond, but current constructor does not have a validator field
+          // (this is about the validator role in the executor (usually held by the validatorTimelock), not the validators of the ValidatorTimelock)
           "handler": {
             "type": "arrayFromOneEvent",
             "event": "ValidatorStatusUpdate",
