add lightlink LL token

--- a/packages/config/src/tokens/tokens.jsonc
+++ b/packages/config/src/tokens/tokens.jsonc
@@ -563,6 +563,10 @@
       "address": "0x514910771AF9Ca656af840dff83E8264EcF986CA"
     },
     {
+      "symbol": "LL",
+      "address": "0x0921799CB1d702148131024d18fCdE022129Dc73"
+    },
+    {
       "symbol": "LOOKS",
       "address": "0xf4d2888d29D722226FafA5d9B24F9164c092421E"
     },
