--- a/turbo.json
+++ b/turbo.json
@@ -23,7 +23,8 @@
     },
     "typecheck": {
       "dependsOn": [
-        "^build"
+        "^build",
+        "^db:generate"
       ],
       "inputs": [
         "**/*.ts",
@@ -32,7 +33,8 @@
     },
     "test": {
       "dependsOn": [
-        "^build"
+        "^build",
+        "^db:generate"
       ],
       "inputs": [
         "**/*.ts",
@@ -43,7 +45,8 @@
     },
     "lint": {
       "dependsOn": [
-        "^build"
+        "^build",
+        "^db:generate"
       ]
     },
     "format": {},
