--- a/packages/backend/discovery/optimism/ethereum/config.jsonc
+++ b/packages/backend/discovery/optimism/ethereum/config.jsonc
@@ -39,6 +39,9 @@
     "0x95703e0982140D16f8ebA6d158FccEde42f04a4C": "SuperchainConfig",
     "0xa3d596EAfaB6B13Ab18D40FaE1A962700C84ADEa": "FeesCollector",
     "0xe5965Ab5962eDc7477C8520243A95517CD252fA9": "DisputeGameFactory",
+    "0x4146DF64D83acB0DcB0c1a4884a16f090165e122": "FaultDisputeGame",
+    "0xD326E10B8186e90F4E2adc5c13a2d0C137ee8b34": "PreimageOracle",
+    "0xE9daD167EF4DE8812C1abD013Ac9570C616599A0": "PermissionedDisputeGame",
   },
   "overrides": {
     "AddressManager": {
@@ -335,6 +338,23 @@
           },
         },
       },
+    },
+    "FaultDisputeGame": {
+      "ignoreMethods": [
+        "getNumToResolve",
+        "resolutionCheckpoints",
+        "resolvedSubgames",
+      ],
+    },
+    "PreimageOracle": {
+      "ignoreMethods": ["zeroHashes"],
+    },
+    "PermissionedDisputeGame": {
+      "ignoreMethods": [
+        "getNumToResolve",
+        "resolutionCheckpoints",
+        "resolvedSubgames",
+      ],
     },
   },
 }
